<resources>
    <string name="app_name">FacePlusApp</string>
    <string name="back_off">back off</string>
    <string name="face_detect_system">HuaYou Face Detect System</string>
    <string name="add_new_face">Add New Face</string>
    <string name="detect_in_real_time">Real-Time Detection</string>
    <string name="et_hint_in_add_new_face">Input name</string>
    <string name="et_hint_in_add_person_info">Input Personal Info</string>
    <string name="et_hint_warning">*Must input name</string>
    <string name="image_add_by_camera">Add Photo by camera</string>
    <string name="image_add_by_folder">Add Photo by local files</string>
    <string name="please_input_name_first">Please input name first</string>
    <string name="image_show">show the image</string>
    <string name="portrait_name">portrait name</string>
    <string name="upload_image">upload image</string>
    <string name="play_intro">play introduction</string>
    <string name="record_intro">Record introduction</string>
    <string name="separator_line">Separator line</string>
    <string name="preview_picture">Preview Picture</string>
</resources>
