<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_face"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hualubeiyou.faceplusapp.ui.activity.AddNewFaceActivity"
    android:background="@color/color_white">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_new_face"
        android:textColor="@color/base_theme_color"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_16"/>

    <EditText
        android:id="@+id/et_input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_base_et"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dp_200"
        android:hint="@string/et_hint_in_add_new_face"
        android:textCursorDrawable="@color/base_theme_color"
        android:textSize="@dimen/sp_16"
        android:maxLines="1"
        android:maxWidth="@dimen/dp_200"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        />

    <TextView
        android:layout_above="@id/et_input_name"
        android:layout_alignEnd="@id/et_input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_hint_warning"
        android:textColor="@color/color_red"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/dp_2"/>

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_add_by_camera"
        android:src="@drawable/ic_add_a_photo"
        android:layout_alignBottom="@id/et_input_name"
        android:layout_toEndOf="@id/et_input_name"
        android:layout_marginStart="@dimen/dp_82"
        android:padding="@dimen/dp_6"
        />

    <ImageView
        android:id="@+id/iv_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_add_by_folder"
        android:src="@drawable/ic_folder_open"
        android:layout_alignBottom="@id/et_input_name"
        android:layout_toEndOf="@id/iv_camera"
        android:layout_marginStart="@dimen/dp_82"
        android:padding="@dimen/dp_6"
        />


</RelativeLayout>
